Worked on the nav more. Got the correct font size, spacing, but still needs work.

--- a/css/index.css
+++ b/css/index.css
@@ -175,7 +175,14 @@ img {
 }
 .navigation .nav {
   display: flex;
+  flex-direction: row;
   justify-content: flex-end;
+}
+.navigation a {
+  font-size: 1.6rem;
+  color: black;
+  padding: 2%;
+  text-decoration: none;
 }
 .footer {
   width: 100%;
