--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,14 @@
   .container();
    .nav {
      display: flex;
+     flex-direction: row;
      justify-content: flex-end;
+   }
+
+   a {
+     font-size: 1.6rem;
+     color: black;
+     padding: 2%;
+     text-decoration: none;
    }
 }
